objects/GDS_GR_Layer_Translation__c.object
<CustomObject>
    <fields>
        <fullName>CPL_Mask_Layer__c</fullName>
        <label>CPL Mask Layer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDS_Layer_Data_Type__c</fullName>
        <label>GDS Layer Data Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDS_Layer_Name__c</fullName>
        <label>GDS Layer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDS_Layer_Number__c</fullName>
        <label>GDS Layer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GDS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDS</label>
        <referenceTo>GDS__c</referenceTo>
        <relationshipLabel>GDS/GR Layer Translations</relationshipLabel>
        <relationshipName>GDS_GR_Layer_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GF_Layer_Data_Type__c</fullName>
        <label>GF Layer Data Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GF_Layer_Name__c</fullName>
        <label>GF Layer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_Layer_Number__c</fullName>
        <label>GF Layer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GF_Mask_Layer__c</fullName>
        <label>GF Mask Layer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GR_Layer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GR Layer</label>
        <referenceTo>GR_Layer__c</referenceTo>
        <relationshipLabel>GDS/GR Layer Translations</relationshipLabel>
        <relationshipName>GDS_GR_Layer_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GR_Masterlist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GR Masterlist</label>
        <referenceTo>GR_Masterlist__c</referenceTo>
        <relationshipLabel>GDS/GR Layer Translations</relationshipLabel>
        <relationshipName>GDS_GR_Layer_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Mask_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mask Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>GDS/GR Layer Translations</relationshipLabel>
        <relationshipName>GDS_GR_Layer_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDS/GR Layer Translation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GDS/GR-{0000000000}</displayFormat>
        <label>GDS-GR Layer Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDS/GR Layer Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>